istio/overlays-2/prod-new/service-ingress-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-internal
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: aparz-spoke-products-sn-01
    service.beta.kubernetes.io/azure-load-balancer-resource-group: apazr-rg-1001
  labels:
    app: istio-ingressgateway
    release: istio
    istio: ingressgateway
spec:
  type: LoadBalancer
  loadBalancerIP: 10.5.67.36
  selector:
    app: istio-ingressgateway
  ports:
    - name: status-port
      port: 15020
      targetPort: 15020
    - name: http2
      port: 80
      targetPort: 80
    - name: https
      port: 443
    - name: kiali
      port: 15029
      targetPort: 15029
    - name: prometheus
      port: 15030
      targetPort: 15030
    - name: grafana
      port: 15031
      targetPort: 15031
    - name: tracing
      port: 15032
      targetPort: 15032
    - name: tls
      port: 15443
      targetPort: 15443
