istio/overlays-2/prod-new/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-ingressgateway
spec:
  servers:
    - port:
        number: 443
        name: https-443-doc-index-updater
        protocol: HTTPS
      hosts:
        - "doc-index-updater.mhra.gov.uk"
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
